@@ -30,6 +30,9 @@ Issue# 27: Fixed error message for assertSame().
 Issue# 25: Added check and error message to user when phantom functions are
 written to a partition mounted with noexec.
 
+Issue# 11: Added support for defining functions like 'function someFunction()'.
+
+
 Changes with 2.1.5
 ------------------
 
